# blob-render

./: .gitattributes  .gitignore  LICENSE  README.md  default_framelum.yaml  pyproject.toml
.git-backup/objects/pack/: pack-56f9b25b4697330a1f49aca05201055260fbf919.idx  pack-56f9b25b4697330a1f49aca05201055260fbf919.pack
Cir_X1_specific/: frame_luminosity_cirX1.ipynb  frame_luminosity_cirX1.py  frame_luminosity_cirX1_loop.py
blobrender/: config.py  fits_conversion.py  frame_luminosity.py  help_strings.py  make_ska_ms.py  paths.py  populatefits.py  predict_fromfits.py  resize_fits.py  setup_container.py  simulation_luminosity.py
blobrender/dart/: dart.py  dart_gui.py  regression.py  test_image.npy
blobrender/tools/: __init__.py  basics.py  calc_beamsize.py  change_RADEC_fits.py  dart.py  plotting.py  pluto_luminosity_conversion.py  populatefits.py  sim_analysis_tools.py
configs/: default_MSbuilder.yaml  default_prediction.yaml  default_simulation.yaml
containers/: Dockerfile  blobrender-singularity.def  oxkat-0.41.sif
notebooks/: frame_luminosity.ipynb  resize_fits.ipynb
sim_data/: fits_info_maxij1820_simulation1.txt
sim_data/maxij1820_simulation/: disp_array_maxij1820_simulation.npy  flt.out  grid.out
telescope_info/: MeerKAT.txt  SKA-Mid.txt  e-MERLIN.txt
telescopes/: SKA-Mid_antenna_layout.txt
tests/: test_fitsconversion.py
tools/: __init__.py  basics.py  change_RADEC_fits.py  copy_MS_column.py  plotting.py  pyplutplot.py  sim_analysis_tools.py
