[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blobrender"
version = "0.1"
readme = "README.md"
description = "Turn simulations into realistic radio images"
authors = [
    { name="Katie Savard", email="katherine.savard@physics.ox.ac.uk" }
]

dependencies = [
    "numpy",
    "pyyaml",
    "casatools",
    "matplotlib",
    "astropy",
    "scipy",
    "pyPLUTO @ git+https://gitlab.mpcdf.mpg.de/sdoetsch/pypluto.git",
    "pyrap",
    "pillow",
    "numba"
]

[project.urls]
Homepage = "http://github.com/katiesavarc/blob-render"

[project.scripts]
"blobrender.make-ms" = "blobrender.make_ska_ms:main"
"blobrender.fits-conversion" = "blobrender.fits_conversion:main"
"blobrender.predict" = "blobrender.predict_fromfits:main"
"blobrender.resize-fits" = "blobrender.resize_fits:main"
"blobrender.simulation-luminosity" = "blobrender.simulation_luminosity:main"

[tool.setuptools]
packages = ["blobrender"]
